k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-blog

spec:
  type: LoadBalancer

  selector:
    app: fastapi-blog

  ports:
    - port: 80
      targetPort: 8080
