k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-blog-ingress
  annotations:
    networking.gke.io/managed-certificates: fastapi-blog-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: blogsj.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-blog
                port:
                  number: 80
